update repo, add npc alignment, fix image style bug

--- a/sass/templates/_npc-template.scss
+++ b/sass/templates/_npc-template.scss
@@ -35,6 +35,7 @@
       &__image {
         padding: 1.6rem;
         background-color: rgba(155,118,83,0.3);
+        height: fit-content;
       }
 
       &__age {
